# dweb

./: .env.example  .gitignore  ANNOUNCEMENTS.md  BUILD.md  BUSINESS-PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES.md  GITHUB-ISSUES-TO-CREATE.md  LICENSE  MICROSOFT-STORE-PLAN.md  P2P-EVALUATION.md  PHASE-STATUS.md  PRIVACY-POLICY.md  README.md  ROADMAP.md  SECURITY.md  WINDOWS-TESTING-P2P.md  WINDOWS-TESTING.md  dweb.bat  dweb.cjs  index.html  package-lock.json  package.json  playwright.config.ts  start-server.sh  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md  (+1 more)
e2e/: service-preview.spec.ts
server/: api-collab.cjs  api-domain.cjs  api-fileshare.cjs  api-ollama.cjs  api-opencode.cjs  api-relay.cjs  api-services.cjs  api-system.cjs  config.cjs  discovery.cjs  helpers.cjs  index.cjs  movies.cjs  opencode-worker.cjs  relay-tcp.cjs  router.cjs  state.cjs
src/: App.tsx  relay-client.ts  safe-invoke.test.ts  safe-invoke.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: ai.rs  cloud.rs  config.rs  database.rs  domain.rs  git.rs  github.rs  lib.rs  main.rs  p2p.rs  sandbox.rs  stack.rs
src/views/: Docs.tsx  (+10 more)
tools/: connectivity-test.cjs  dweb-connect-test.html  dweb-launcher.cs  dweb-relay.cjs  dweb-server.cjs  icon-generator.html  relay-client.cjs  start-test-peer.bat  start-test-peer.bat.bak  webrtc-transport.cjs
welcome/: fileshare.html  welcome.html
(+34 files in other folders)
