[package]
name = "dweb"
version = "0.1.0"
description = "Decentralized Web Platform - Host, Publish, and Browse P2P content"
authors = ["Dweb Team"]
edition = "2021"

[lib]
name = "dweb_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyperdht = "0.1"
dht-rpc = "0.0"
hypercore = "0.16"
ed25519-dalek = "2"
rand = "0.8"
sled = "0.34"
hex = "0.4"
base64 = "0.22"
futures = "0.3"
sha2 = "0.10"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs-next = "2.0"
once_cell = "1.20"
clap = { version = "4", features = ["derive"] }
git2 = "0.19"
tempfile = "3"
